--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "pancake-toolkit",
+  "name": "plutopepe-toolkit2",
   "version": "1.0.0",
-  "description": "Pancake frontend packages",
-  "private": true,
+  "description": "Pluto Pepe frontend packages",
+  "private": false,
   "workspaces": [
     "packages/*"
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pancakeswap/pancake-toolkit.git"
+    "url": "git+https://github.com/Koinstreet/pancake-toolkit.git"
   },
   "license": "ISC",
   "bugs": {
@@ -16,6 +16,7 @@
   },
   "homepage": "https://github.com/pancakeswap/pancake-toolkit#readme",
   "scripts": {
+    "storybook": "lerna run storybook",
     "build": "lerna run build",
     "test": "lerna run test",
     "lint": "lerna run lint",
