--- a/packages/pancake-uikit/package.json
+++ b/packages/pancake-uikit/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@pancakeswap/uikit",
+  "name": "pepepluto2-uikit",
   "version": "0.39.3",
-  "description": "Set of UI components for pancake projects",
+  "description": "Set of UI components for pepe pluto projects",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
-  "repository": "https://github.com/pancakeswap/pancake-toolkit/tree/master/packages/pancake-uikit",
+  "repository": "https://github.com/Koinstreet/pancake-toolkit",
   "license": "MIT",
   "scripts": {
     "start": "yarn storybook",
